--- a/Lab3_int_array_overload/CMakeLists.txt
+++ b/Lab3_int_array_overload/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Lab3_int_array_overload)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Lab3_int_array_overload main.cpp)
+add_executable(Lab3_int_array_overload main.cpp Array.cpp Array.h)
