--- a/Lab2_Assignment_and_reviewer/CMakeLists.txt
+++ b/Lab2_Assignment_and_reviewer/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Lab2_Assignment_and_reviewer)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Lab2_Assignment_and_reviewer main.cpp Task.cpp Task.h Verifier.cpp Verifier.h)
+add_executable(Lab2_Assignment_and_reviewer main.cpp Task.cpp Task.h Verifier.cpp Verifier.h func.cpp func.h)
