--- a/Lab5_rhombic_inheritance/CMakeLists.txt
+++ b/Lab5_rhombic_inheritance/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Lab5_rhombic_inheritance)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Lab5_rhombic_inheritance main.cpp Man.cpp Man.h)
+add_executable(Lab5_rhombic_inheritance main.cpp Man.cpp Man.h Employee.cpp Employee.h)
