--- a/Lab6_virtual_func_product/CMakeLists.txt
+++ b/Lab6_virtual_func_product/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Lab6_virtual_func_product)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Lab6_virtual_func_product main.cpp)
+add_executable(Lab6_virtual_func_product main.cpp Product.cpp Product.h)
