--- a/Lab6_virtual_func_product/CMakeLists.txt
+++ b/Lab6_virtual_func_product/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Lab6_virtual_func_product)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Lab6_virtual_func_product main.cpp Product.cpp Product.h)
+add_executable(Lab6_virtual_func_product main.cpp Product.cpp Product.h Dairy_products.cpp Dairy_products.h Cheese.cpp Cheese.h Ceramic_products.cpp Ceramic_products.h)
