--- a/Lab7_binary_search_template/CMakeLists.txt
+++ b/Lab7_binary_search_template/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Lab7_binary_search_template)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Lab7_binary_search_template main.cpp binary_find.h)
+add_executable(Lab7_binary_search_template main.cpp binary_find.h menu_func.cpp menu_func.h)
