--- a/Lab11_namespaces/CMakeLists.txt
+++ b/Lab11_namespaces/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Lab11_namespaces)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Lab11_namespaces main.cpp src/Transport.cpp src/Transport.h src/Engine.cpp src/Engine.h src/Engine_oil.cpp src/Engine_oil.h)
+add_executable(Lab11_namespaces main.cpp src/Transport.cpp src/Transport.h src/Engine.cpp src/Engine.h src/Engine_oil.cpp src/Engine_oil.h src/Wheel.cpp src/Wheel.h src/Headlight.cpp src/Headlight.h src/Lamp.cpp src/Lamp.h src/Car.cpp src/Car.h)
