--- a/Lab9_file_notes/CMakeLists.txt
+++ b/Lab9_file_notes/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Lab9_file_notes)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Lab9_file_notes main.cpp src/Notes.cpp src/Notes.h src/file_work.cpp src/file_work.h)
+add_executable(Lab9_file_notes main.cpp src/Notes.cpp src/Notes.h src/file_work.cpp src/file_work.h src/menu_functions.cpp src/menu_functions.h)
