--- a/Lab10_container_class_circle/CMakeLists.txt
+++ b/Lab10_container_class_circle/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Lab10_container_class_circle)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Lab10_container_class_circle main.cpp src/Ring.inl src/Ring.h)
+add_executable(Lab10_container_class_circle main.cpp src/Ring.inl src/Ring.h src/menu_functions.cpp src/menu_functions.h)
