--- a/4_term/SPO/lab7/main/CMakeLists.txt
+++ b/4_term/SPO/lab7/main/CMakeLists.txt
@@ -6,6 +6,6 @@ set(CMAKE_C_STANDARD 11)
 set(THREADS_PREFER_PTHREAD_FLAG ON)
 find_package(Threads REQUIRED)
 
-add_executable(main main.c functions.c)
+add_executable(main main.c ../functions.c)
 
 target_link_libraries(main PRIVATE Threads::Threads)
