--- a/4_term/SPO/lab7/consumer/CMakeLists.txt
+++ b/4_term/SPO/lab7/consumer/CMakeLists.txt
@@ -3,4 +3,9 @@ project(consumer C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(consumer main.c)
+set(THREADS_PREFER_PTHREAD_FLAG ON)
+find_package(Threads REQUIRED)
+
+add_executable(consumer main.c ../functions.c)
+
+target_link_libraries(consumer PRIVATE Threads::Threads)
