--- a/4_term/SPO/lab7/producer/CMakeLists.txt
+++ b/4_term/SPO/lab7/producer/CMakeLists.txt
@@ -3,4 +3,9 @@ project(producer C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(producer main.c)
+set(THREADS_PREFER_PTHREAD_FLAG ON)
+find_package(Threads REQUIRED)
+
+add_executable(producer main.c ../functions.c)
+
+target_link_libraries(producer PRIVATE Threads::Threads)
