--- a/4_term/SPO/lab4/child/CMakeLists.txt
+++ b/4_term/SPO/lab4/child/CMakeLists.txt
@@ -3,4 +3,4 @@ project(child C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(child main.c)
+add_executable(child main.c functions_child.c functions_child.h)
