--- a/4_term/SPO/lab4/parent/CMakeLists.txt
+++ b/4_term/SPO/lab4/parent/CMakeLists.txt
@@ -3,4 +3,4 @@ project(parent C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(parent main.c functions/functions.c functions/functions.h)as
+add_executable(parent main.c parent_functions.c parent_functions.h)
