--- a/5_term/SIFO/.gitignore
+++ b/5_term/SIFO/.gitignore
@@ -4,6 +4,9 @@
 incremental_db/
 db/
 
+# Builders
+.sopc_builder/
+
 # Simulations
 simulation/
 output_files/
@@ -13,3 +16,17 @@ output_files/
 *.qpf
 *.qsf
 *.qws
+*.rpt
+*.summary
+
+
+# I dont know what it is
+# *.bsf // block schematic file? 
+*.jpg
+*.html
+*.bak
+*.rpt
+*.pin
+*.pof
+*.sof
+*.txt
