--- a/5_term/IiPY/lab2/CMakeLists.txt
+++ b/5_term/IiPY/lab2/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.23)
-project (lab2 C)
+project(lab2)
 
-set(CMAKE_C_STANDARD 17)
+set(CMAKE_CXX_STANDARD 17)
 
-add_executable(lab2 main.c)
+add_executable(lab2 main.cpp)
