--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-/.idea/
 # Prerequisites
 *.d
 
@@ -34,7 +33,9 @@
 *.bin
 
 # Ignore any folder
-*.idea/
 *cmake-build-debug/
+.idea/
+.fleet/
+
 # Except labs and src folders
 !src/
