--- a/5_term/SIFO/lab4/lab4_quartus/lab4.qsf
+++ b/5_term/SIFO/lab4/lab4_quartus/lab4.qsf
@@ -38,13 +38,48 @@
 
 set_global_assignment -name FAMILY "Stratix II"
 set_global_assignment -name DEVICE AUTO
-set_global_assignment -name TOP_LEVEL_ENTITY lab4
+set_global_assignment -name TOP_LEVEL_ENTITY main
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 9.1
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "11:21:49  NOVEMBER 09, 2022"
 set_global_assignment -name LAST_QUARTUS_VERSION 9.1
 set_global_assignment -name USE_GENERATED_PHYSICAL_CONSTRAINTS OFF -section_id eda_blast_fpga
 set_global_assignment -name DEVICE_FILTER_SPEED_GRADE FASTEST
+set_global_assignment -name LL_ROOT_REGION ON -entity lab4 -section_id "Root Region"
+set_global_assignment -name LL_MEMBER_STATE LOCKED -entity lab4 -section_id "Root Region"
+set_global_assignment -name SIMULATION_MODE FUNCTIONAL
 set_global_assignment -name BDF_FILE main.bdf
-set_global_assignment -name MIF_FILE RAM_mif.mif
-set_global_assignment -name BDF_FILE processor_registers.bdf
 set_global_assignment -name BDF_FILE control_device.bdf
+set_global_assignment -name BDF_FILE processor_registers.bdf
+set_global_assignment -name BDF_FILE ROM.bdf
+set_global_assignment -name BDF_FILE RAM.bdf
+set_global_assignment -name VECTOR_WAVEFORM_FILE main.vwf
+set_global_assignment -name VECTOR_WAVEFORM_FILE control_device.vwf
+set_global_assignment -name VECTOR_WAVEFORM_FILE processor_registers.vwf
+set_global_assignment -name VECTOR_WAVEFORM_FILE ROM.vwf
+set_global_assignment -name VECTOR_WAVEFORM_FILE RAM.vwf
+set_global_assignment -name MIF_FILE ROM_mif.mif
+set_global_assignment -name MIF_FILE RAM_mif.mif
+set_global_assignment -name QIP_FILE lpm_dff0.qip
+set_global_assignment -name QIP_FILE lpm_counter0.qip
+set_global_assignment -name QIP_FILE lpm_counter1.qip
+set_global_assignment -name QIP_FILE lpm_decode0.qip
+set_global_assignment -name QIP_FILE lpm_decode1.qip
+set_global_assignment -name QIP_FILE lpm_rom0.qip
+set_global_assignment -name QIP_FILE lpm_bustri0.qip
+set_global_assignment -name QIP_FILE lpm_add_sub1.qip
+set_global_assignment -name QIP_FILE lpm_bustri1.qip
+set_global_assignment -name QIP_FILE lpm_dff1.qip
+set_global_assignment -name QIP_FILE lpm_dff2.qip
+set_global_assignment -name QIP_FILE reg0.qip
+set_global_assignment -name QIP_FILE lpm_decode2.qip
+set_global_assignment -name QIP_FILE reg1.qip
+set_global_assignment -name QIP_FILE reg3.qip
+set_global_assignment -name QIP_FILE lpm_mux0.qip
+set_global_assignment -name QIP_FILE sum9.qip
+set_global_assignment -name QIP_FILE ../../../../../../../my_files/programming_language/Quartus/test/lpm_ram_dq2.qip
+set_global_assignment -name LL_ROOT_REGION ON -section_id "Root Region"
+set_global_assignment -name LL_MEMBER_STATE LOCKED -section_id "Root Region"
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name INCREMENTAL_VECTOR_INPUT_SOURCE main.vwf
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
