--- a/5_term/SIFO/lab4/lab4_quartus/lab4.qsf
+++ b/5_term/SIFO/lab4/lab4_quartus/lab4.qsf
@@ -82,4 +82,5 @@ set_global_assignment -name LL_MEMBER_STATE LOCKED -section_id "Root Region"
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name INCREMENTAL_VECTOR_INPUT_SOURCE main.vwf
+set_global_assignment -name END_TIME "2 us"
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
