--- a/5_term/SIFO/lab5/lab5.qsf
+++ b/5_term/SIFO/lab5/lab5.qsf
@@ -65,4 +65,5 @@ set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name LL_ROOT_REGION ON -section_id "Root Region"
 set_global_assignment -name LL_MEMBER_STATE LOCKED -section_id "Root Region"
 set_global_assignment -name INCREMENTAL_VECTOR_INPUT_SOURCE main.vwf
+set_global_assignment -name ZIP_VECTOR_WAVEFORM_FILE "E:\\university\\BSUIR\\BSUIR_labs\\5_term\\SIFO\\lab5\\db\\lab5.sim.cvwf"
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
