--- a/6_term/AVP/lab1/CMakeLists.txt
+++ b/6_term/AVP/lab1/CMakeLists.txt
@@ -2,6 +2,6 @@ cmake_minimum_required(VERSION 3.24)
 project(lab1)
 
 set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mavx -O2") #
+#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mavx -O2")
 
 add_executable(lab1 main.cpp)
