--- a/6_term/AVP/lab5/CMakeLists.txt
+++ b/6_term/AVP/lab5/CMakeLists.txt
@@ -5,5 +5,4 @@ set(CMAKE_CUDA_STANDARD 17)
 
 add_executable(lab5 main.cu Image.cu Image.h)
 
-set_target_properties(lab5 PROPERTIES
-        CUDA_SEPARABLE_COMPILATION ON)
+set_target_properties(lab5 PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
