--- a/.gitignore
+++ b/.gitignore
@@ -38,10 +38,12 @@
 *cmake-build-debug/
 .idea/
 .fleet/
+.vscode/
 
 # Except labs and src folders
 !src/
 .fleet/
+target/
 =======
 # Prerequisites
 *.d
