--- a/7_term/Mod/lab1/Cargo.toml
+++ b/7_term/Mod/lab1/Cargo.toml
@@ -3,6 +3,11 @@ name = "lab1"
 version = "0.1.0"
 edition = "2021"
 
+# [[bin]]
+# edition = "2024"
+# name = "someApp"
+# path = "src/main.rs"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
