--- a/6_term/AVP/lab5/CMakeLists.txt
+++ b/6_term/AVP/lab5/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.25)
-project(lab5 CUDA)
+project(lab5 LANGUAGES CUDA)
 
+set(CMAKE_CUDA_ARCHITECTURES native)
 set(CMAKE_CUDA_STANDARD 17)
 
 add_executable(lab5 main.cu Image.cu Image.cuh
